--- a/index.html
+++ b/index.html
@@ -259,7 +259,7 @@
               <div class="card overflow-hidden">
                 <div style="height: 350px" >
                   <img
-                    src="/assets/images/playguitar.png"
+                    src="/assets/images/people.png"
                     alt=""
                     class="w-100 h-100 object-fit-cover"
                   />
